@@ -99,6 +99,7 @@ Click on a key to get more information.
 ** <<config-stress-monitor-system-cpu-relief-threshold>>
 * <<config-core>>
 ** <<config-recording>>
+** <<config-enabled>>
 ** <<config-instrument>>
 ** <<config-service-name>>
 ** <<config-service-node-name>>
@@ -390,6 +391,30 @@ You can use this setting to dynamically disable Elastic APM at runtime.
 |============
 | Java System Properties      | Property file   | Environment
 | `elastic.apm.recording` | `recording` | `ELASTIC_APM_RECORDING`
+|============
+
+// This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
+[float]
+[[config-enabled]]
+==== `enabled` (added[1.18.0])
+
+Setting to false will completely disable the agent, including instrumentation and remote config polling.
+If you want to dynamically change the status of the agent, use <<config-recording,`recording`>> instead.
+
+
+
+
+[options="header"]
+|============
+| Default                          | Type                | Dynamic
+| `true` | Boolean | false
+|============
+
+
+[options="header"]
+|============
+| Java System Properties      | Property file   | Environment
+| `elastic.apm.enabled` | `enabled` | `ELASTIC_APM_ENABLED`
 |============
 
 // This file is auto generated. Please make your changes in *Configuration.java (for example CoreConfiguration.java) and execute ConfigurationExporter
@@ -2386,6 +2411,15 @@ The default unit for this option is `ms`.
 # Default value: true
 #
 # recording=true
+
+# Setting to false will completely disable the agent, including instrumentation and remote config polling.
+# If you want to dynamically change the status of the agent, use <<config-recording,`recording`>> instead.
+#
+# This setting can not be changed at runtime. Changes require a restart of the application.
+# Type: Boolean
+# Default value: true
+#
+# enabled=true
 
 # A boolean specifying if the agent should instrument the application to collect performance metrics for the app. When set to false, Elastic APM will not affect your application at all.
 # 
